# Plane_Height_Sensor_Fusion

./: CMakeLists.txt  Pyka.slnx  Pyka.vcxproj  Pyka.vcxproj.filters  README.md  Report.docx  csvParser.h  groundTracker.cpp  groundTracker.h  heightEstimator.cpp  main.cpp  outlierRejection.cpp  outlier_rejection.cpp  outlier_rejection.h  parser.cpp  parser.h
Given_Data/: output_estimated.csv
Output/: file.csv  outputfile2.csv
Python_Plot/: plot.py
output/: output2.csv  outputfile2.csv
src/: csvParser.cpp  csvParser.h  groundTracker.cpp  heightEstimator.cpp  heightEstimator.h  main.cpp  outlierRejection.cpp
